# rustix-kernel

./: .gitignore  Cargo.toml  README.MD  debug.sh  linker.ld  make_uefi_boot_drive.sh  run.sh  run_uefi
.cargo/: config.toml
boot/: entry.asm  entry_efi.asm  multiboot.asm  multiboot_header.asm
iso/boot/: dummy1.img  dummy2.img
iso/boot/grub/: grub.cfg
scripts/: boot.sh  prepare_old_grub.sh  prepare_uefi.txt
src/: asm.rs  bootinfo.rs  gop_demo.rs  main.rs  multiboot.rs  test_bitmap.rs
src/boot/: cpuid.rs  mod.rs  multiboot.rs  multiboot_tag.rs
src/drivers/: mod.rs  vga.rs  vga_graphics.rs  vga_text.rs
src/drivers/acpi/: acpi.rs  acpi_fadt.rs  acpi_sdt.rs  acpi_tables.rs  mod.rs  table_printer.rs
src/drivers/apic/: apic.rs  mod.rs  pit.rs
src/drivers/pci/: mod.rs  pci.rs  pci_bar.rs  pci_device.rs  pci_io.rs  pci_quirks.rs
src/drivers/usb/: ehci.rs  mod.rs  uhci.rs  xhci.rs
src/drivers/vga/: mod.rs  vga_fonts.rs  vga_graphics.rs  vga_text.rs
src/graphics/: bitmap.rs  color.rs  font.rs  graphics.rs  mod.rs  test_bitmap.rs  vga_demo.rs
src/interrupts/: exceptions.rs  gdt.rs  mod.rs  router.rs  vector.rs
src/interrupts/hardware/: mod.rs  pic8259.rs
src/memory/: dir_mapping.rs  dma.rs  early_heap.rs  eba.rs  ioremap.rs  kheap.rs  kheap_test.rs  ll_allocator.rs  mapping.rs  mod.rs  page_tables.rs  pages.rs  paging.rs  pat.rs  pmm.rs  secure_stack.rs
src/memory/_/: gallocator.rs
src/misc/: prng.rs
src/video/: bitmap_font.rs  console.rs  framebuffer.rs  gop_demo.rs  kprint.rs  mod.rs  text_mode.rs
uefi/boot/grub/: grub.cfg
(+32 files in other folders)
