[package]
name = "rustix"
version = "0.1.0"
edition = "2024"

[dependencies]
bootloader = "0.9"
pc-keyboard = "0.8.0"
pic8259 = "0.11.0"
spin = "0.10.0"
x86_64 = "0.15.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[[bin]]
name = "rustix"
test=false
bench=false
