[package]
name = "rustix"
version = "0.1.0"
edition = "2024"

[dependencies]
spin = "0.10.0"
x86_64 = "0.15.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"
opt-level = 1
debug = true

[profile.release]
panic = "abort"
opt-level = 3
debug = true

[[bin]]
name = "rustix"
test=false
bench=false
